# cx-studio-tools

./: README.md  pyproject.toml
src/cx-subtitler/: subtitler.kv  subtitler_app.py
